# first_court

./: .coverage  .env  .env.template  .firebaserc  .gitignore  .gitmodules  404.html  README.md  analisis_querella.md  case_report.md  docker-compose.yml  drive_test_conf_20250214_122400.json  drive_test_structure.json  editor-config.json  ejmplo.md  env.d.ts  firebase.json  firestore.rules  idea_claude.md  index.html  interacciones_CASO-2025-002.md  last_event_id.txt  mkdocs.yml  package-lock.json  package.json  project_map.yaml  pyproject.toml  pytest.ini  requirements.txt  resolucion_CASO-2025-002.md  setup.py  sitemap.xml  storage.rules  test_admisibilidad.py  test_agents_interaction.py  test_court_agent.py  test_defender_agent.py  test_judge_agent.py  test_prosecutor_agent.py  test_secretary_agent.py  (+4 more)
arquitectura/: index.html
ayuda/: index.html
backend/: .env  requirements.txt  test_calendar_auth.py  token.pickle
cline_docs/: activeContext.md  current_project_state.md  productContext.md  progress.md  systemPatterns.md  techContext.md
config/: judicial_settings.py
custom/: README.md
development/: index.html
docs/: README.md  adaptacion_chile.md  analisis_agentcourt.md  deployment.md  drive_improvements.md  firebase-distribution.md  future_improvements.md  gather_integration_notes.md  gmail_improvements.md  google_integration.md  implementation_progress.md  index.md  mejoras_interaccion_agentes.md  restructuring_plan.md  roadmap.md  slack_integration_config.md  slack_integration_guide.md  slack_token_troubleshooting.md  slack_troubleshooting.md  slack_webhook_ngrok_guide.md  slack_webhook_setup.md  (+1 more)
(+377 files in other folders)
