[tool.poetry]
name = "chilean-judicial-ai"
version = "0.1.0"
description = "Sistema autónomo de simulación procesal chilena"
authors = ["AutonomosCdM <contact@autonomos.ai>"]

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.18"
chromadb = "^0.5.0"
rich = "^13.7.1"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.17"
requests = "^2.32.3"
psutil = "^7.0.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.161.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.161.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
